# glance-a-lot

./: .env  .gitignore  README.md  abstract.md  glance-a-lot.py  glance_a_lot.py  pyproject.toml  requirements.txt  setup.py
setup/: __init__.py
src/: .env  EmotionDetection.py  EmotionDetectionWrapper.py  Glance_A_Lot_Client.py  Reminders.py  Search.py  ServerStatistics.py  __init__.py  emotion_detection_model_creator.py  emotion_detection_model_loader.py  glance_a_lot_client.py  lr.pkl  search.py  vectorizer.pkl  weather.py
