[tool.poetry]
name = "glance-a-lot"
version = "0.1.0"
description = ""
authors = ["pupper emeritus <pupperemeritus9@protonmail.com>"]
readme = "README.md"
packages = [{include = "glance_a_lot"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.0.2"
matplotlib = "^3.6"
discord.py = "^2.1"
seaborn = "0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
